added order form and prices

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <div>
             <img src="./assets/image-1.jpg" alt="">
             <h3>Name: Pina Tropical</h3>
-            <p>Price: $10.00</p>
+            <p>Price: $6.00 for 6 oz</p>
+            <p>Price: $10.00 for 16 oz</p>
           </div>
           <small>
             Ingredient: Mango, Pineapple <br> Lemmon, Ginger, Agave
@@ -42,8 +43,9 @@
         <div class="category">
           <div>
             <img src="./assets/image-2.jpg" alt="">
-            <h3>Name: Itelligent <br> water</h3>
-            <p>Price: $10.00</p>
+            <h3>Name: Itelliget <br> water</h3>
+            <p>Price: $6.00 for 6 oz</p>
+            <p>Price: $10.00 for 16 oz</p>
           </div>
           <small>
             Ingredient: Watermelon, lemmon, <br> Ginger, Agave
@@ -54,7 +56,8 @@
           <div>
             <img src="./assets/image-3.jpg" alt="">
             <h3>Name: Zobo</h3>
-            <p>Price: $10.00</p>
+            <p>Price: $6.00 for 6 oz</p>
+            <p>Price: $10.00 for 16 oz</p>
           </div>
           <small>
             Ingredient: Hibiscus, strawberry, Raspberry <br>Pineapple, Ginger, Lemon, Agave
@@ -65,7 +68,8 @@
           <div>
             <img src="./assets/image-6.jpg" alt="">
             <h3>Name: Orange</h3>
-            <p>Price: $10.00</p>
+            <p>Price: $6.00 for 6 oz</p>
+            <p>Price: $10.00 for 16 oz</p>
           </div>
           <small>
             Ingredient: 100% Orange
@@ -76,14 +80,15 @@
           <div>
             <img src="./assets/image-9.jpg" alt="">
             <h3>Name: Traditional Ginger Beer</h3>
-            <p>Price: $10.00</p>
+            <p>Price: $6.00 for 6 oz</p>
+            <p>Price: $10.00 for 16 oz</p>
           </div>
           <small>
             Ingredient: Lemmon, Ginger, Agave, Clove
           </small>
         </div>
       </div>
-      <button><a href="info@zegher.com">Order Now</a></button>
+      <button><a href="orderForm.html">Order Now</a></button>
     </div>
 
 
