adding navigation back to menu

--- a/orderForm.html
+++ b/orderForm.html
@@ -32,9 +32,9 @@
         <textarea name="message" rows="6">Enter any detail information here</textarea>
         <div class="cta">
           <button class="btn">Submit</button>
-          <button><a href="./index.html" class="btn">Menu</a></button>
         </div>
       </form>
+      <button class="btn"><a href="./index.html" class="btn">Menu</a></button>
     </div>
   </div>
 
