making form input required

--- a/orderForm.html
+++ b/orderForm.html
@@ -18,8 +18,8 @@
         <input type="hidden" name="access_key" value="46acdc09-eab1-449d-8409-5f942f011ee5">
         <h1>Place your order</h1>
         <div class="input">
-          <input type="text" name="name" placeholder="Enter your name">
-          <input type="email" name="email" placeholder="Email">
+          <input type="text" name="name" placeholder="Enter your name" required>
+          <input type="email" name="email" placeholder="Email" required>
         </div>
         <select name="" id="">
           <option value="Mango">Mango</option>
@@ -28,8 +28,8 @@
           <option value="Orange">Orange</option>
           <option value="Traditional Ginger Beer">Traditional Ginger Beer</option>
         </select>
-        <input type="text" placeholder="Number of jucie">
-        <textarea name="message" rows="6">Enter any detail information here</textarea>
+        <input type="text" placeholder="Number of jucie" required>
+        <textarea name="message" rows="6" required>Enter any detail information here</textarea>
         <div class="cta">
           <button class="btn">Submit</button>
         </div>
