making responsive and adding phone contact

--- a/orderForm.html
+++ b/orderForm.html
@@ -12,15 +12,18 @@
       <h1>Welcome to Malawi Village</h1>
       <p>Where every sip feels like spring</p>
     </div>
+
   <div>
     <div class="form_container">
       <form action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="46acdc09-eab1-449d-8409-5f942f011ee5">
         <h1>Place your order</h1>
+
         <div class="input">
           <input type="text" name="name" placeholder="Enter your name" required>
           <input type="email" name="email" placeholder="Email" required>
         </div>
+        <input type="text" placeholder="Phone number">
         <select name="" id="">
           <option value="Mango">Mango</option>
           <option value="Intelligent water">Intelliget water</option>
@@ -28,11 +31,15 @@
           <option value="Orange">Orange</option>
           <option value="Traditional Ginger Beer">Traditional Ginger Beer</option>
         </select>
+
         <input type="text" placeholder="Number of jucie" required>
+
         <textarea name="message" rows="6" required>Enter any detail information here</textarea>
+
         <div class="cta">
           <button class="btn">Submit</button>
         </div>
+
       </form>
       <button class="btn"><a href="./index.html" class="btn">Menu</a></button>
     </div>
