making changes to price

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <img class="flavor" src="assets/image-1.jpg" alt="">
       <img class="flavor" src="assets/image-2.jpg" alt="">
-      <img class="flavor" src="assets/image-3.jpg" alt="">
+      <img class="flavor" src="assets/zobo.jpg" alt="">
       <img class="flavor" src="assets/image-6.jpg" alt="">
       <img class="flavor" src="assets/image-7.jpg" alt="">
       <img class="flavor" src="assets/image-9.jpg" alt="">
@@ -68,8 +68,8 @@
           <div>
             <img src="./assets/image-6.jpg" alt="">
             <h3>Name: Orange</h3>
-            <p>Price: $6.00 for 6 oz</p>
-            <p>Price: $10.00 for 16 oz</p>
+            <p>Price: $6.00 for 8oz</p>
+            <p>Price: $10.00 for 16oz</p>
           </div>
           <small>
             Ingredient: 100% Orange
