--- a/orderForm.html
+++ b/orderForm.html
@@ -25,8 +25,8 @@
         </div>
         <input type="text" placeholder="Phone number">
         <select name="" id="">
-          <option value="Mango">Mango</option>
-          <option value="Intelligent water">Intelliget water</option>
+          <option value="Mango">Zobo</option>
+          <option value="Intelligent water">Intelligent water</option>
           <option value="Pina Tropical">Pina Tropical</option>
           <option value="Orange">Orange</option>
           <option value="Traditional Ginger Beer">Traditional Ginger Beer</option>
