updating minimun order

--- a/orderForm.html
+++ b/orderForm.html
@@ -6,9 +6,11 @@
   <title>Malawi Village Order-Form</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body style="
+  background: white;
+">
     <div class="identity">
-      <img src="assets/logo.png" alt="">
+      <a href="/index.html"><img src="assets/logo.png" alt=""></a>
       <h1>Welcome to Malawi Village</h1>
       <p>Where every sip feels like spring</p>
     </div>
@@ -17,7 +19,10 @@
     <div class="form_container">
       <form action="https://api.web3forms.com/submit" method="POST">
         <input type="hidden" name="access_key" value="46acdc09-eab1-449d-8409-5f942f011ee5">
-        <h1>Place your order</h1>
+        <div class="order-head">
+          <h1>Place your order</h1>
+          <p>Minimum of 10 orders for small bottles and 5 orders for big bottles</p>
+        </div>
 
         <div class="input">
           <input type="text" name="name" placeholder="Enter your name" required>
@@ -34,14 +39,13 @@
 
         <input type="text" placeholder="Number of jucie" required>
 
-        <textarea name="message" rows="6" required>Enter any detail information here</textarea>
+        <textarea name="message" rows="6" required placeholder="Enter any details about your order."></textarea>
 
         <div class="cta">
           <button class="btn">Submit</button>
         </div>
 
       </form>
-      <button class="btn"><a href="./index.html" class="btn">Menu</a></button>
     </div>
   </div>
 
